# symbios-shape

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench_main.rs
examples/: simple_building.rs
src/: error.rs  genetics.rs  grammar.rs  interpreter.rs  lib.rs  model.rs  ops.rs  query.rs  scope.rs
tests/: align_tests.rs  attach_tests.rs  grammar_tests.rs  interpreter_tests.rs  mass_tests.rs  occlusion_tests.rs  offset_tests.rs  polygon_tests.rs  roof_tests.rs  snap_tests.rs
