[package]
name = "symbios-shape"
version = "0.1.0"
edition = "2024"
authors = ["Janus"]
description = "A derivation engine for CGA Shape Grammars."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/symbios-shape"
keywords = ["grammar", "procedural", "generative", "simulation"]
categories = ["simulation", "game-development", "mathematics"]

[dependencies]
glam = { version = "0.30.10", features = ["serde"] }
nom = "8.0.0"
rand = "0.9.2"
rand_pcg = "0.9.0"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.8"

[[bench]]
name = "bench_main"
harness = false

[profile.bench]
debug = true
